# esc-firmware

./: .gitignore  README.md
.github/workflows/: build.yml
firmware/: CMakeLists.txt
firmware/.github/workflows/: build.yml
firmware/inc/: common.h  dshot.h  eeprom.h  firmwareversion.h  functions.h  kiss_telemetry.h  ntc_tables.h  sounds.h  targets.h  version.h
firmware/mcu/K19XXVK035/Inc/: ADC.h  IO.h  comparator.h  main.h  peripherals.h
firmware/mcu/K19XXVK035/Src/: ADC.c  IO.c  K19xxVK035_it.c  comparator.c  eeprom.c  phaseouts.c  serial_telemetry.c
firmware/mcu/k19xxvk035/: esc_app.ld
firmware/mcu/k19xxvk035/Inc/: ADC.h  K19xxVK035_it.h
firmware/mcu/k19xxvk035/Src/: ADC.c  IO.c  K19xxVK035_it.c  eeprom.c  peripherals.c  serial_telemetry.c
firmware/mcu/v203/: esc_app.ld
firmware/mcu/v203/Inc/: ADC.h  peripherals.h
firmware/mcu/v203/Src/: ADC.c  IO.c  ch32v20x_it.c  comparator.c  eeprom.c  peripherals.c  phaseouts.c  serial_telemetry.c  system_ch32v20x.c
firmware/src/: dshot.c  firmwareversion.c  functions.c  kiss_telemetry.c  main.c  signal.c  sounds.c
